updated github link in project page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div id="hero-row" class="row">
             <div id="scriptedA4" class="col-lg-6 col-lg-offset-3">
               <p class="lead"><em>Scripted is designed to bridge the gap between CSS3 animations and cross browser compatible state changes. Rather than relying on keyframes in CSS, the Scripted library is used to create cuepoint actions on a timeline.</em></p>
-              <p><button type="button" class="btn btn-lg btn-block"><a href="#">Try it now.</a></button></p>
+              <p><button type="button" class="btn btn-lg btn-block"><a href="https://github.com/thedatalife/scripted/blob/master/js/Scripted.js">Try it now.</a></button></p>
             </div>
           </div>
           <div id="content-row" class="row">
