added in requestAnimationFrame shim

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
             <div id="scriptedA2" class="col-lg-4">
               <h2>Works with jQuery or Zepto.</h2>
-              <p>Compatible with all browsers. Provides Javascript based state changes and plays well with CSS3.</p>
+              <p>Uses the requestAnimationFrame shim for browser compatibility. Provides Javascript based state changes and plays well with CSS3.</p>
             </div>
             <div id="scriptedA3" class="col-lg-4">
               <h2>Lightweight and flexible.</h2>
