adding minified Scripted file

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ SA.startTimer();
         
         <script src="js/lib/jQuery.js"></script>
         <script src="js/lib/bootstrap.js"></script>
-        <script src="js/Scripted.js"></script>
+        <script src="js/Scripted.min.js"></script>
         <script type="text/javascript">
           var SA, SB, SC;
           $(document).ready(function(){
