full IE support in demo

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             }
           }
         </style>
+        <script src="js/lib/respond.min.js"></script>
     </head>
     
     <body>
